Refactor synthese.html for improved structure
ajout caendrier

--- a/site/synthese.html
+++ b/site/synthese.html
@@ -258,7 +258,7 @@ footer {
 <div class="cta-section">
 <h2>Prêt à passer à l’action ?</h2>
 <p>Un échange de 30 minutes suffit pour transformer ce diagnostic en plan concret.</p>
-<a href="PASTE_YOUR_GOOGLE_APPOINTMENTS_LINK_HERE"
+<a href="https://calendar.app.google/i4cFit3dH79Z97pF7E"
    target="_blank" rel="noopener"
    class="cta-button">
 📅 Planifier mon entretien
@@ -350,3 +350,4 @@ document.getElementById("generalScore").innerHTML =
 
 </body>
 </html>
+
