Refactor HTML structure and styles for synthese page

--- a/site/synthese.html
+++ b/site/synthese.html
@@ -248,7 +248,7 @@ footer {
 <p>Envoyez vos résultats à notre équipe pour un retour personnalisé.</p>
 <button onclick="sendReport()">📨 Envoyer ma scorecard</button>
 
-<a href="PASTE_YOUR_GOOGLE_APPOINTMENTS_LINK_HERE"
+<a href="https://calendar.app.google/i4cFit3dH79Z97pF7"
    target="_blank" rel="noopener"
    class="calendar-btn">
 📅 Réserver un entretien gratuit (30 min)
@@ -350,4 +350,5 @@ document.getElementById("generalScore").innerHTML =
 
 </body>
 </html>
+
 
