Fix HTML encoding issues in synthese.html

--- a/site/synthese.html
+++ b/site/synthese.html
@@ -248,7 +248,7 @@ footer {
 <p>Envoyez vos résultats à notre équipe pour un retour personnalisé.</p>
 <button onclick="sendReport()">📨 Envoyer ma scorecard</button>
 
-<a href="https://calendar.app.google/i4cFit3dH79Z97pF7"
+<a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh"
    target="_blank" rel="noopener"
    class="calendar-btn">
 📅 Réserver un entretien gratuit (30 min)
@@ -350,5 +350,6 @@ document.getElementById("generalScore").innerHTML =
 
 </body>
 </html>
+
 
 
