Fix HTML encoding issues in synthese.html

--- a/site/synthese.html
+++ b/site/synthese.html
@@ -258,7 +258,7 @@ footer {
 <div class="cta-section">
 <h2>Prêt à passer à l’action ?</h2>
 <p>Un échange de 30 minutes suffit pour transformer ce diagnostic en plan concret.</p>
-<a href="https://calendar.app.google/i4cFit3dH79Z97pF7E"
+<a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh"
    target="_blank" rel="noopener"
    class="cta-button">
 📅 Planifier mon entretien
@@ -350,6 +350,7 @@ document.getElementById("generalScore").innerHTML =
 
 </body>
 </html>
+
 
 
 
