Add appointment scheduling section with styling
Added a new section for scheduling appointments with a gradient background and various information cards.

--- a/site/index.html
+++ b/site/index.html
@@ -161,6 +161,87 @@
     “Grâce au diagnostic AML, nous avons anticipé un audit réglementaire.”<br><strong>— Karim, Responsable conformité</strong>
   </div>
 </section>
+<!-- =======================
+     SECTION RENDEZ-VOUS
+======================= -->
+<section id="prendre-rendez-vous"
+style="
+  background: linear-gradient(135deg, #001f3f, #003a70);
+  color: white;
+  padding: 80px 20px;
+  text-align: center;
+">
+
+  <div style="max-width: 900px; margin: 0 auto;">
+
+    <h2 style="font-size: 2.6em; margin-bottom: 20px;">
+      🎯 Passez du diagnostic à l’action
+    </h2>
+
+    <p style="
+      font-size: 1.25em;
+      line-height: 1.6;
+      max-width: 750px;
+      margin: 0 auto 35px auto;
+      opacity: 0.95;
+    ">
+      Vous avez complété votre diagnostic.  
+      En <strong>30 minutes gratuites</strong>, nous analysons vos résultats et vous indiquons
+      <strong>quoi corriger en priorité</strong>, <strong>quoi automatiser</strong> et
+      <strong>comment sécuriser votre activité</strong> sans complexité inutile.
+    </p>
+
+    <div style="
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
+    ">
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">📊</div>
+        <strong>Lecture de vos scores</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">ESG, AML, digital, cyber, crédit</p>
+      </div>
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">⚠️</div>
+        <strong>Priorités & risques</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">Ce qui mérite une action immédiate</p>
+      </div>
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">🧭</div>
+        <strong>Plan d’action clair</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">Sans jargon, sans vente forcée</p>
+      </div>
+
+    </div>
+
+    <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3I7vzOldRpspNfyC0kwY4SBBtwZl8q1VCuUtwLBdXZ0xKrWZr3uR1_TcBvJzIDbwHh5vjmy1wh"
+       target="_blank"
+       rel="noopener"
+       style="
+         display: inline-block;
+         background: #28a745;
+         color: white;
+         padding: 18px 36px;
+         font-size: 1.3em;
+         border-radius: 10px;
+         text-decoration: none;
+         font-weight: bold;
+         box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+       ">
+      📅 Réserver mon entretien gratuit (30 min)
+    </a>
+
+    <p style="margin-top: 18px; font-size: 0.9em; opacity: 0.85;">
+      ✔ Sans engagement &nbsp; • &nbsp; ✔ Confidentiel &nbsp; • &nbsp; ✔ Créneaux limités
+    </p>
+
+  </div>
+</section>
 
 <section id="temoignages">
   <h2>🎤 Ils témoignent</h2>
