--- a/site/index.html
+++ b/site/index.html
@@ -241,6 +241,42 @@ style="
     </p>
 
   </div>
+  <section id="realite-du-risque" style="background:#f8f9fb; padding:60px 20px;">
+  <h2 style="text-align:center; color:#001f3f;">⚠️ Risques documentés et impacts réels</h2>
+
+  <div style="max-width:900px; margin:30px auto; font-size:1.05em; color:#444;">
+
+    <p>
+      <strong>Cyberattaque significative :</strong>
+      En avril 2025, plusieurs grandes entreprises ont été affectées par une attaque de ransomware, mettant
+      hors ligne leurs systèmes pendant près de 7 semaines, avec des pertes évaluées à plus de 300 millions £. 
+      <a href="https://www.theguardian.com/business/2025/jul/08/m-and-s-boss-cyber-attacks-archie-norman" target="_blank">Source presse</a>. :contentReference[oaicite:8]{index=8}
+    </p>
+
+    <p>
+      <strong>Ransomware et services publics :</strong>
+      Une attaque contre un fournisseur de systèmes IT en Suède a perturbé des services municipaux pour
+      environ 200 régions, avec une rançon demandée d’environ 1,5 bitcoin (~163 245 $). 
+      <a href="https://www.itpro.com/security/cyber-attacks/ransomware-attack-on-it-supplier-disrupts-hundreds-of-swedish-municipalities" target="_blank">Source IT press</a>. :contentReference[oaicite:9]{index=9}
+    </p>
+
+    <p>
+      <strong>Attaques et amendes sur les PME :</strong>
+      Une récente étude a montré que 59 % des PME ont subi une attaque et qu’un tiers ont fait face à des
+      amendes substantielles suite à un incident de cybersécurité.
+      <a href="https://www.hiscoxgroup.com/news/press-releases/2025/29-09-25" target="_blank">Source Hiscox</a>. :contentReference[oaicite:10]{index=10}
+    </p>
+
+    <p>
+      <strong>Sanctions AML / KYC :</strong>
+      En 2022, les amendes pour manquements à la lutte contre le blanchiment d’argent ont dépassé plusieurs
+      milliards de dollars, dont plus de 2 milliards $ pour des banques ne respectant pas les règles essentielles.
+      <a href="https://complyadvantage.com/fr/insights/le-top-2022-des-amendes-lcb-ft-2/" target="_blank">Source analyse amendes</a>. :contentReference[oaicite:11]{index=11}
+    </p>
+
+  </div>
+</section>
+
 </section>
 
 <section id="temoignages">
